# cmake-project-template

./: .gitignore  CMakeLists.txt  run.sh
src/: main.cpp
